fix header alignment

--- a/web/src/components/netflow-traffic.css
+++ b/web/src/components/netflow-traffic.css
@@ -50,7 +50,7 @@ span.pf-c-button__icon.pf-m-start {
     display: flex;
     flex-direction: row;
     margin-bottom: 10px;
-    padding-right: var(--pf-global--spacer--md);
+    padding-right: 1rem;
 }
 
 .flex {
